[CSS Filters] brightness() function doesn't work as specified https://bugs.webkit.org/show_bug.cgi?id=106674

Source/WebCore:

Reviewed by Dean Jackson.

The brightness filter implementation modified the intercept instead of the slope on
the feComponentTransfer function. The passed amount acts as multiplier for each
color chanel now.

Existing tests cover the changes and were updated.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseBuiltinFilterArguments):
* platform/graphics/ca/mac/PlatformCALayerMac.mm:
(PlatformCALayer::setFilters):
* rendering/FilterEffectRenderer.cpp:
(WebCore::FilterEffectRenderer::build):

LayoutTests:

Negative brightness values are possible but are meaningless. Modify the tests
to mainly use positive amounts for brightness tests.

Reviewed by Dean Jackson.

* css3/filters/effect-brightness-clamping-hw.html:
* css3/filters/effect-brightness-hw.html:
* css3/filters/effect-combined-hw.html:
* css3/filters/effect-combined.html:
* css3/filters/multiple-filters-invalidation.html:
* css3/filters/null-effect-check.html:
* css3/filters/script-tests/filter-property-parsing-invalid.js:
* css3/filters/script-tests/filter-property-parsing.js:

Canonical link: https://commits.webkit.org/125153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139770 268f45cc-cd09-0410-ab3c-d52691b4dbfc